[project]
name = "blogwritteragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
]
